--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
    margin-bottom: 15px;
 }
 
-._gereen-mod {
+._green-mod {
    color: #12a741;
 }
 
@@ -109,7 +109,7 @@ body {
    line-height: 89px;
    color: #424242;
 
-   transform: translate(0, -120%);
+   transform: translate(0, -120%); 
    opacity: 0;
    transition: all 0.8s ease 0s;
 }
@@ -192,12 +192,13 @@ body {
    font-weight: 400;
    line-height: 24px;
 
-   transform: translate(-150%, 0px);
+   opacity: 0;
    transition: all 0.3s ease 0s;
 }
 
 .experiance__items._active li  {
-   transform: translate( 0px, 0px);
+   opacity: 1;
+   transition: all 0.3s ease 0s;
 } 
 
 .experiance__items._active li:nth-child(1)  {
@@ -214,6 +215,9 @@ body {
 } 
 .experiance__items._active li:nth-child(5)  {
    transition: all 0.8s ease 0.8s;
+} 
+.experiance__items._active li:nth-child(6)  {
+   transition: all 0.8s ease 1s;
 } 
 
 
@@ -274,7 +278,7 @@ body {
       animation-iteration-count: infinite;
 }
 
-@keyframes shake {
+/* @keyframes shake {
    0% { transform: translate(1px, 1px) rotate(0deg); }
    10% { transform: translate(-1px, -2px) rotate(-1deg); }
    20% { transform: translate(-3px, 0px) rotate(1deg); }
@@ -286,7 +290,7 @@ body {
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
-}
+} */
 
 /* Contacts */
 .contacts {
